// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formats html 1`] = `
"<!doctype html>
<html xmlns=\\"http://www.w3.org/1999/xhtml\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" xmlns:o=\\"urn:schemas-microsoft-com:office:office\\">
  <head>
    <title>This is a title</title>
    <!--[if !mso]><!-->
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <!--<![endif]-->
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <style type=\\"text/css\\">
      #outlook a { padding:0; }
      body { margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%; }
      table, td { border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; }
      img { border:0;height:auto;line-height:100%; outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; }
      p { display:block;margin:13px 0; }
    </style>
    <!--[if mso]>
    <noscript>
    <xml>
    <o:OfficeDocumentSettings>
      <o:AllowPNG/>
      <o:PixelsPerInch>96</o:PixelsPerInch>
    </o:OfficeDocumentSettings>
    </xml>
    </noscript>
    <![endif]-->
    <!--[if lte mso 11]>
    <style type=\\"text/css\\">
      .mj-outlook-group-fix { width:100% !important; }
    </style>
    <![endif]-->
    
      <!--[if !mso]><!-->
        <link href=\\"https://unpkg.com/@fontsource/inter@5.0.3/index.css\\" rel=\\"stylesheet\\" type=\\"text/css\\">
        <style type=\\"text/css\\">
          @import url(https://unpkg.com/@fontsource/inter@5.0.3/index.css);
        </style>
      <!--<![endif]-->

    
    
    <style type=\\"text/css\\">
      @media only screen and (min-width:480px) {
        .mj-column-per-100 { width:100% !important; max-width: 100%; }
      }
    </style>
    <style media=\\"screen and (min-width:480px)\\">
      .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
    </style>
    
  
    <style type=\\"text/css\\">
    
    

    @media only screen and (max-width:479px) {
      table.mj-full-width-mobile { width: 100% !important; }
      td.mj-full-width-mobile { width: auto !important; }
    }
  
    </style>
    <style type=\\"text/css\\">
    a {
  color: inherit;
  text-decoration: underline;
  text-decoration-style: dotted;
}
a.plain {
  text-decoration: none;
  color: inherit;
}
a:hover {
  text-decoration: underline;
}
    </style>
    
  </head>
  <body style=\\"word-spacing:normal;\\">
    
    <div style=\\"display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;\\">This is a body</div>
  
    
      <div
         style=\\"\\"
      >
        
      
      <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]-->
    
      
      <div  style=\\"margin:0px auto;max-width:600px;\\">
        
        <table
           align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:20px 0;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:600px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"vertical-align:top;\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:250px;\\">
              
        <a
           href=\\"https://lets.church\\" target=\\"_blank\\"
        >
          
      <img
         src=\\"https://mail.letschurch.cloud/logo.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;\\" width=\\"250\\" height=\\"auto\\"
      />
    
        </a>
      
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Inter, sans-serif;font-size:16px;line-height:165%;text-align:left;color:#111111;\\"
      ><h1>This is a title</h1>
<p>This is a body</p></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    
      
      <!--[if mso | IE]></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]-->
    
      
      <div  style=\\"margin:0px auto;max-width:600px;\\">
        
        <table
           align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:20px 0;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:600px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"vertical-align:top;\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"
                >
                  
      
     <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:4px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\">
                  <a  href=\\"https://www.facebook.com/profile.php?id=100092315746719\\" target=\\"_blank\\">
                    <img
                       height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-facebook.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:4px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\">
                  <a  href=\\"https://twitter.com/lets_church\\" target=\\"_blank\\">
                    <img
                       height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-twitter.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:4px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\">
                  <a  href=\\"https://github.com/LetsChurch\\" target=\\"_blank\\">
                    <img
                       height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-github.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:4px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\">
                  <a  href=\\"https://gitlab.com/LetsChurch\\" target=\\"_blank\\">
                    <img
                       height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-gitlab.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    
      
      <!--[if mso | IE]></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]-->
    
      
      <div  style=\\"margin:0px auto;max-width:600px;\\">
        
        <table
           align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:20px 0;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:600px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"vertical-align:top;\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Inter, sans-serif;font-size:16px;font-weight:bold;line-height:1;text-align:center;color:#111111;\\"
      ><a href=\\"https://lets.church\\" class=\\"plain\\" target=\\"_blank\\"></a></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    
      
      <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
      </div>
    
  </body>
</html>
  "
`;

exports[`handles multiple paragraphs 1`] = `
"<!doctype html>
<html xmlns=\\"http://www.w3.org/1999/xhtml\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" xmlns:o=\\"urn:schemas-microsoft-com:office:office\\">
  <head>
    <title>This is a title</title>
    <!--[if !mso]><!-->
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <!--<![endif]-->
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <style type=\\"text/css\\">
      #outlook a { padding:0; }
      body { margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%; }
      table, td { border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; }
      img { border:0;height:auto;line-height:100%; outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; }
      p { display:block;margin:13px 0; }
    </style>
    <!--[if mso]>
    <noscript>
    <xml>
    <o:OfficeDocumentSettings>
      <o:AllowPNG/>
      <o:PixelsPerInch>96</o:PixelsPerInch>
    </o:OfficeDocumentSettings>
    </xml>
    </noscript>
    <![endif]-->
    <!--[if lte mso 11]>
    <style type=\\"text/css\\">
      .mj-outlook-group-fix { width:100% !important; }
    </style>
    <![endif]-->
    
      <!--[if !mso]><!-->
        <link href=\\"https://unpkg.com/@fontsource/inter@5.0.3/index.css\\" rel=\\"stylesheet\\" type=\\"text/css\\">
        <style type=\\"text/css\\">
          @import url(https://unpkg.com/@fontsource/inter@5.0.3/index.css);
        </style>
      <!--<![endif]-->

    
    
    <style type=\\"text/css\\">
      @media only screen and (min-width:480px) {
        .mj-column-per-100 { width:100% !important; max-width: 100%; }
      }
    </style>
    <style media=\\"screen and (min-width:480px)\\">
      .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
    </style>
    
  
    <style type=\\"text/css\\">
    
    

    @media only screen and (max-width:479px) {
      table.mj-full-width-mobile { width: 100% !important; }
      td.mj-full-width-mobile { width: auto !important; }
    }
  
    </style>
    <style type=\\"text/css\\">
    a {
  color: inherit;
  text-decoration: underline;
  text-decoration-style: dotted;
}
a.plain {
  text-decoration: none;
  color: inherit;
}
a:hover {
  text-decoration: underline;
}
    </style>
    
  </head>
  <body style=\\"word-spacing:normal;\\">
    
    <div style=\\"display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;\\">This is a body</div>
  
    
      <div
         style=\\"\\"
      >
        
      
      <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]-->
    
      
      <div  style=\\"margin:0px auto;max-width:600px;\\">
        
        <table
           align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:20px 0;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:600px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"vertical-align:top;\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:250px;\\">
              
        <a
           href=\\"https://lets.church\\" target=\\"_blank\\"
        >
          
      <img
         src=\\"https://mail.letschurch.cloud/logo.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;\\" width=\\"250\\" height=\\"auto\\"
      />
    
        </a>
      
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Inter, sans-serif;font-size:16px;line-height:165%;text-align:left;color:#111111;\\"
      ><h1>This is a title</h1>
                        <p>This is a body</p>
<p>This is a second paragraph.</p>
<p>This is a third paragraph.</p></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    
      
      <!--[if mso | IE]></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]-->
    
      
      <div  style=\\"margin:0px auto;max-width:600px;\\">
        
        <table
           align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:20px 0;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:600px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"vertical-align:top;\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"
                >
                  
      
     <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:4px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\">
                  <a  href=\\"https://www.facebook.com/profile.php?id=100092315746719\\" target=\\"_blank\\">
                    <img
                       height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-facebook.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:4px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\">
                  <a  href=\\"https://twitter.com/lets_church\\" target=\\"_blank\\">
                    <img
                       height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-twitter.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:4px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\">
                  <a  href=\\"https://github.com/LetsChurch\\" target=\\"_blank\\">
                    <img
                       height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-github.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:4px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\">
                  <a  href=\\"https://gitlab.com/LetsChurch\\" target=\\"_blank\\">
                    <img
                       height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-gitlab.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    
      
      <!--[if mso | IE]></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]-->
    
      
      <div  style=\\"margin:0px auto;max-width:600px;\\">
        
        <table
           align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:20px 0;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:600px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"vertical-align:top;\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Inter, sans-serif;font-size:16px;font-weight:bold;line-height:1;text-align:center;color:#111111;\\"
      ><a href=\\"https://lets.church\\" class=\\"plain\\" target=\\"_blank\\"></a></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    
      
      <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
      </div>
    
  </body>
</html>
  "
`;

exports[`minifies by default 1`] = `
"<!doctype html><html xmlns=\\"http://www.w3.org/1999/xhtml\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" xmlns:o=\\"urn:schemas-microsoft-com:office:office\\"><head><title>This is a title</title><!--[if !mso]><!--><meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\"><!--<![endif]--><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1\\"><style type=\\"text/css\\">#outlook a { padding:0; }
      body { margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%; }
      table, td { border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; }
      img { border:0;height:auto;line-height:100%; outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; }
      p { display:block;margin:13px 0; }</style><!--[if mso]>
    <noscript>
    <xml>
    <o:OfficeDocumentSettings>
      <o:AllowPNG/>
      <o:PixelsPerInch>96</o:PixelsPerInch>
    </o:OfficeDocumentSettings>
    </xml>
    </noscript>
    <![endif]--><!--[if lte mso 11]>
    <style type=\\"text/css\\">
      .mj-outlook-group-fix { width:100% !important; }
    </style>
    <![endif]--><!--[if !mso]><!--><link href=\\"https://unpkg.com/@fontsource/inter@5.0.3/index.css\\" rel=\\"stylesheet\\" type=\\"text/css\\"><style type=\\"text/css\\">@import url(https://unpkg.com/@fontsource/inter@5.0.3/index.css);</style><!--<![endif]--><style type=\\"text/css\\">@media only screen and (min-width:480px) {
        .mj-column-per-100 { width:100% !important; max-width: 100%; }
      }</style><style media=\\"screen and (min-width:480px)\\">.moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }</style><style type=\\"text/css\\">@media only screen and (max-width:479px) {
      table.mj-full-width-mobile { width: 100% !important; }
      td.mj-full-width-mobile { width: auto !important; }
    }</style><style type=\\"text/css\\">a {
  color: inherit;
  text-decoration: underline;
  text-decoration-style: dotted;
}
a.plain {
  text-decoration: none;
  color: inherit;
}
a:hover {
  text-decoration: underline;
}</style></head><body style=\\"word-spacing:normal;\\"><div style=\\"display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;\\">This is a body</div><div><!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]--><div style=\\"margin:0px auto;max-width:600px;\\"><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"width:100%;\\"><tbody><tr><td style=\\"direction:ltr;font-size:0px;padding:20px 0;text-align:center;\\"><!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:600px;\\" ><![endif]--><div class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"vertical-align:top;\\" width=\\"100%\\"><tbody><tr><td align=\\"center\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"><tbody><tr><td style=\\"width:250px;\\"><a href=\\"https://lets.church\\" target=\\"_blank\\"><img src=\\"https://mail.letschurch.cloud/logo.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;\\" width=\\"250\\" height=\\"auto\\"></a></td></tr></tbody></table></td></tr><tr><td align=\\"left\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"><div style=\\"font-family:Inter, sans-serif;font-size:16px;line-height:165%;text-align:left;color:#111111;\\"><h1>This is a title</h1><p>This is a body</p><p>This is a second paragraph.</p><p>This is a third paragraph.</p></div></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><![endif]--></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]--><div style=\\"margin:0px auto;max-width:600px;\\"><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"width:100%;\\"><tbody><tr><td style=\\"direction:ltr;font-size:0px;padding:20px 0;text-align:center;\\"><!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:600px;\\" ><![endif]--><div class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"vertical-align:top;\\" width=\\"100%\\"><tbody><tr><td align=\\"center\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"><!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td><![endif]--><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"><tbody><tr><td style=\\"padding:4px;vertical-align:middle;\\"><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"><tbody><tr><td style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\"><a href=\\"https://www.facebook.com/profile.php?id=100092315746719\\" target=\\"_blank\\"><img height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-facebook.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"></a></td></tr></tbody></table></td></tr></tbody></table><!--[if mso | IE]></td><td><![endif]--><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"><tbody><tr><td style=\\"padding:4px;vertical-align:middle;\\"><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"><tbody><tr><td style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\"><a href=\\"https://twitter.com/lets_church\\" target=\\"_blank\\"><img height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-twitter.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"></a></td></tr></tbody></table></td></tr></tbody></table><!--[if mso | IE]></td><td><![endif]--><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"><tbody><tr><td style=\\"padding:4px;vertical-align:middle;\\"><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"><tbody><tr><td style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\"><a href=\\"https://github.com/LetsChurch\\" target=\\"_blank\\"><img height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-github.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"></a></td></tr></tbody></table></td></tr></tbody></table><!--[if mso | IE]></td><td><![endif]--><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"><tbody><tr><td style=\\"padding:4px;vertical-align:middle;\\"><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:20px;\\"><tbody><tr><td style=\\"font-size:0;height:20px;vertical-align:middle;width:20px;\\"><a href=\\"https://gitlab.com/LetsChurch\\" target=\\"_blank\\"><img height=\\"20\\" src=\\"https://mail.letschurch.cloud/brand-gitlab.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"20\\"></a></td></tr></tbody></table></td></tr></tbody></table><!--[if mso | IE]></td></tr></table><![endif]--></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><![endif]--></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]--><div style=\\"margin:0px auto;max-width:600px;\\"><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"width:100%;\\"><tbody><tr><td style=\\"direction:ltr;font-size:0px;padding:20px 0;text-align:center;\\"><!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:600px;\\" ><![endif]--><div class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"vertical-align:top;\\" width=\\"100%\\"><tbody><tr><td align=\\"center\\" style=\\"font-size:0px;padding:10px 25px;word-break:break-word;\\"><div style=\\"font-family:Inter, sans-serif;font-size:16px;font-weight:bold;line-height:1;text-align:center;color:#111111;\\"><a href=\\"https://lets.church\\" class=\\"plain\\" target=\\"_blank\\"></a></div></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><![endif]--></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><![endif]--></div></body></html>"
`;
